
syntax = "proto3";
// system_user_dept 系统用户部门
package user;
option go_package = "cloud/service/system/user;user";
import "google/protobuf/timestamp.proto";

// SystemUserDeptObject 数据对象
message SystemUserDeptObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 2; //系统用户 id
	// @inject_tag: db:"dept_id" json:"deptId"
	optional int64 dept_id = 3; //部门 id
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 4; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 5; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 6; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 7; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 8; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 9; //更新时间
}


// SystemUserDeptCustomObject 数据对象
message SystemUserDeptCustomObject {
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 1; //系统用户 id
	// @inject_tag: db:"dept_ids" json:"deptIds"
	optional bytes dept_ids = 2; //部门 id
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 3; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 4; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 5; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 6; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 7; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 8; //更新时间
}


// SystemUserDeptCreateRequest 创建数据请求
message SystemUserDeptCreateRequest {
	SystemUserDeptCustomObject data = 1;
}
// SystemUserDeptCreateResponse 创建数据响应
message SystemUserDeptCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// SystemUserDeptListRequest 列表数据
message SystemUserDeptListRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"dept_id" json:"deptId"
	optional int64 dept_id = 3; // 部门 id
	// @inject_tag: db:"user_id" json:"userId"
	optional int64 user_id = 4; // 系统用户 id

}

// SystemUserDeptListResponse 数据响应
message SystemUserDeptListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated SystemUserDeptObject data = 3;
}


// SystemUserDeptService 服务
service SystemUserDeptService{
	rpc SystemUserDeptCreate(SystemUserDeptCreateRequest) returns (SystemUserDeptCreateResponse);
	rpc SystemUserDeptList(SystemUserDeptListRequest) returns (SystemUserDeptListResponse);
}
